--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ENSIGNA | Hogar y Deco</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="icon" type="image/x-icon" href="./assets/img/logo-favicon.ico">
     <script defer src="./js/carrito.js"></script>
@@ -17,7 +19,7 @@
             <div class="d-flex flex-wrap align-items-center justify-content-between">
                 <a href="#"><img class="img-logo" src="./assets/img/logo.png" alt="Logo Ensigna"></a>
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="./pages/productos.html" class="nav-link px-2 link-body-emphasis">PRODUCTOS</a></li>
+                    <li><a href="./pages/page-productos.html" class="nav-link px-2 link-body-emphasis">PRODUCTOS</a></li>
                     <li><a href="./pages/como-comprar.html" class="nav-link px-2 link-body-emphasis">¿CÓMO COMPRAR?</a></li>
                     <li><a href="#contacto" class="nav-link px-2 link-body-emphasis">CONTACTO</a></li>
                 </ul>
@@ -111,5 +113,7 @@
     <!---------------SCRIPT------------------->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.all.min.js"></script>
 </body>
 </html>
