--- a/pages/finalizar-compra.html
+++ b/pages/finalizar-compra.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ENSIGNA | Carrito</title>
+    <title>ENSIGNA | Finalizar compra</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.0/dist/sweetalert2.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" type="image/x-icon" href="../assets/img/logo-favicon.ico">
     <script defer src="../js/carrito.js"></script>
+    <script defer src="../js/finalizar-compra.js"></script>
 </head>
 <body>
     <!-----------------BARRA DE NAVEGACIÓN----------------->
@@ -23,50 +24,65 @@
                     <li><a href="../index.html#contacto" class="nav-link px-2 link-body-emphasis">CONTACTO</a></li>
                 </ul>
                 <div class="text-end">
-                    <a href="#" class="d-block link-body-emphasis text-decoration-none">
+                    <a href="carrito.html" class="d-block link-body-emphasis text-decoration-none">
                         <img src="../assets/img/carrito.svg" alt="mdo" width="32" height="32" class="img-icon carrito">
                     </a>
                 </div>
-                
             </div>
         </div>
     </header>
     <main>
-    <!--------------PRODUCTOS DEL CARRITO----------------->
-    <h1>MI CARRITO</h1>
-    <div id="carrito-container">
-        <div id="mensaje-carrito-vacio">
-            <p>El carrito está vacío.</p>
-        </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Producto</th>
-                    <th scope="col">Código</th>
-                    <th scope="col">Precio</th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody id="productos-carrito">
-                
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td class="text-end"><strong>Total:</strong></td>
-                    <td id="total" class="text-center"></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td colspan="3" class="text-end"><strong>3 cuotas sin interés de:</strong></td>
-                    <td id="cuotas" class="text-center"></td>
-                </tr>
-            </tfoot>
-        </table>
-        <button id="btnFinalizarCompra" style="display: none;">Finalizar Compra</button>
-    </div>
+        <section>
+            <h1>Finalizar compra</h1>
+            <div class="container">
+                <h3>Datos personales</h3>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="nombre" value="Juana María Peréz">
+                    <label for="nombre">Nombre</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="email" value="juanaperez@mail.com">
+                    <label for="email">Email</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="tel" class="form-control" id="telefono" value="01145698723">
+                    <label for="telefono">Teléfono</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <select class="form-select" id="floatingSelect" aria-label="Floating label select example">
+                        <option id="total" value="0">1 cuota de $0.00</option>
+                        <option id="cuotas" value="0">3 cuotas sin interés de $0.00</option>
+                    </select>
+                    <label for="floatingSelect">Selecciona en cuantas cuotas deseas pagar</label>
+                </div>
+                <h3>Datos de pago</h3>
+                <div class="form-floating mb-3">
+                    <input type="number" class="form-control" id="numeroTarjeta" value="0012345678912345">
+                    <label for="numeroTarjeta">Número de la tarjeta</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="text" class="form-control" id="nombrePago" value="Juana M. Peréz">
+                    <label for="nombrePago">Nombre</label>
+                </div>
+                <div class="row g-2">
+                    <div class="col-md">
+                        <div class="form-floating">
+                            <input type="text" class="form-control" id="vencimiento" value="05/26">
+                            <label for="vencimiento">Vencimiento</label>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <div class="form-floating">
+                            <input type="number" class="form-control" id="cvc" value="123">
+                            <label for="cvc">CVC</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <button id="btnComprar">Comprar</button>
+                </div>
+            </div>
+        </section>
     </main>
     <!---------------FOOTER----------------->
     <div class="border-top"></div>
@@ -80,7 +96,7 @@
                 </div>
             </footer>
         </div>
-<!---------------SCRIPT------------------->
+    <!---------------SCRIPT------------------->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
